update #1 hide keyborad from barcodeInputElement 14000604

--- a/src/app/barcode/barcode.page.html
+++ b/src/app/barcode/barcode.page.html
@@ -8,7 +8,7 @@
 
   <div class="barcode-container ion-padding">
     <ion-label>{{ barcodeContainerLabel }}</ion-label>
-    <ion-input autofocus="true" #barcode></ion-input>
+    <ion-input #barcode></ion-input>
   </div>
 
 </ion-content>
