--- a/src/app/barcode/barcode.page.html
+++ b/src/app/barcode/barcode.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="secondary">
     <ion-title class="ion-text-center" >{{ Caption }}</ion-title>
   </ion-toolbar>
 </ion-header>
