--- a/src/global.scss
+++ b/src/global.scss
@@ -38,3 +38,15 @@
 .map-toast-message {
   text-align: center;
 }
+
+.broken-product-alert .alert-wrapper {
+  text-align: right;
+}
+
+.broken-product-alert .alert-wrapper .alert-head {
+  text-align: right;
+}
+
+.broken-product-alert .alert-wrapper .alert-button-group {
+  justify-content: center !important;
+}
