--- a/src/app/broken-product/modalPages/brokrn-register/brokrn-register.component.html
+++ b/src/app/broken-product/modalPages/brokrn-register/brokrn-register.component.html
@@ -15,7 +15,7 @@
     </ion-list-header>
   
     <ion-item>
-      <ion-select placeholder="مسئول" ok-text="انتخاب" cancel-text="انصراف">
+      <ion-select placeholder="مسئول" ok-text="انتخاب" cancel-text="انصراف" (ionChange)="selectOptions($event, 'responser')">
         <ion-select-option value="f">آقای امیری</ion-select-option>
         <ion-select-option value="m">آقای آیینه</ion-select-option>
       </ion-select>
@@ -31,7 +31,7 @@
     </ion-list-header>
 
     <ion-item>
-      <ion-select placeholder="علت شکست" ok-text="انتخاب" cancel-text="انصراف">
+      <ion-select placeholder="علت شکست" ok-text="انتخاب" cancel-text="انصراف" (ionChange)="selectOptions($event, 'brokenReason')">
         <ion-select-option value="LiftTruck">برخورد با لیفتراک</ion-select-option>
         <ion-select-option value="HumanError">خطای انسانی</ion-select-option>
         <ion-select-option value="Transportation">حمل و نقل</ion-select-option>
@@ -40,6 +40,13 @@
   
   </ion-list>
 
-  <ion-button class="ion-padding" shape="round" fill="solid" expand="block" color="success">ثبت</ion-button>
+  <ion-button [disabled]=" isDisabled() "
+              class="ion-padding" 
+              shape="round"
+              fill="solid" 
+              expand="block" 
+              color="success">
+              ثبت
+  </ion-button>
 
 </ion-content>
