--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -29,7 +29,19 @@
     </ion-avatar>
 
   </ion-item>
-  
+
+  <ion-item button (click)="goTospecificPage('printLabel')">
+
+    <ion-label class="ion-text-right">
+      چاپ لیبل
+    </ion-label>
+
+    <ion-avatar slot="end">
+      <img src="../../assets/images/printLabel.jpg">
+    </ion-avatar>
+
+  </ion-item>
+
 </ion-content>
 
 
