--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -49,17 +49,11 @@
 
   <ion-toolbar color="light">
 
-    <!-- <ion-buttons slot="secondary">
-      <ion-button>
-        حساب کاربری
-      </ion-button>
-    </ion-buttons> -->
-
-    <ion-buttons slot="primary">
-      <ion-button color="danger" (click)="logOut()">
+    <div class="button-operation">
+      <ion-button color="danger" (click)="logOut()" shape="round">
         خروج
       </ion-button>
-    </ion-buttons>
+    </div>
 
   </ion-toolbar>
 
