--- a/src/app/broken-product/broken-product.page.scss
+++ b/src/app/broken-product/broken-product.page.scss
@@ -12,7 +12,7 @@
 .product-attribute-container {
   display: grid;
   grid-template-rows: auto;
-  grid-template-columns: auto 90px;
+  grid-template-columns: auto 95px;
   grid-template-areas: "product-attribute-description product-attribute-label";
   width: 100%;
   padding: 5px 0;
@@ -25,7 +25,7 @@
 
 .product-attribute-container .product-attribute-label span {
   white-space: nowrap;
-  font-size: 11px;
+  font-size: 12px;
   font-weight: bold;
 }
 
@@ -36,10 +36,17 @@
 
 .product-attribute-container .product-attribute-description span {
   white-space: pre-wrap;
-  font-size: 12px;
+  font-size: 14px;
   text-justify: inter-word;
+  font-weight: bold;
+  color: maroon;
 }
 
 ion-toolbar span {
   display: flex;
+}
+
+.barcode-tracker-message {
+  display: flex;
+  justify-content: center;
 }
