--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -33,7 +33,7 @@
   <ion-item button (click)="goTospecificPage('printLabel')" *ngIf=" defaultWorkGroupId === 9 ">
 
     <ion-label class="ion-text-right">
-      چاپ لیبل
+      چاپ لیبل پای سکو
     </ion-label>
 
     <ion-avatar slot="end">
